# FTIBM

./: CMakeLists.txt  FTIBM.c
include/: FTIBM_decl.h
lib/: FTIBM_defs.c  config.c
results/daint/: 10_iterations_9600_procs_1GB_per_proc_job_out.txt
results/marconi/: 5_iterations_17408_procs_500MB_per_proc_job_out.txt
