cmake_minimum_required (VERSION 2.6)
project (FTIBM)
add_executable(FTIBM FTIBM.c)
set(FTI_PATH "" CACHE STRING "Path to FTI")
if (FTI_PATH STREQUAL "")
    set(FTI_PATH "/usr/local")
endif()
set(FTI_LIBRARIES "-Wl,-rpath,${FTI_PATH}/lib -lfti")
set(LIB_SRC ${CMAKE_SOURCE_DIR}/lib/FTIBM_defs.c ${CMAKE_SOURCE_DIR}/lib/config.c ${CMAKE_SOURCE_DIR}/lib/iniparser/iniparser.c ${CMAKE_SOURCE_DIR}/lib/iniparser/dictionary.c)
add_library(FTIBMlib STATIC ${LIB_SRC})
find_package(MPI REQUIRED)
include_directories("${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/include/iniparser" ${MPI_C_INCLUDE_PATH} "${FTI_PATH}/include")
target_link_libraries(FTIBM FTIBMlib ${MPI_C_LIBRARIES} ${FTI_LIBRARIES})
install(TARGETS FTIBM DESTINATION ${CMAKE_INSTALL_PREFIX})
